Efmub-Ogy/src/objects/Flight_Leg__c.object
<CustomObject>
    <description>Represents a specific flight leg.</description>
    <fields>
        <fullName>AccumulatedTime__c</fullName>
        <label>Accumulated Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualArrivalGMTTime__c</fullName>
        <label>Actual Arrival GMT Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualArrivalTime__c</fullName>
        <label>Actual Arrival Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualDepartureGMTTime__c</fullName>
        <label>Actual Departure GMT Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualDepartureTime__c</fullName>
        <label>Actual Departure Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualInGMTTimestamp__c</fullName>
        <label>ActualInGMTTimestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualInTimestamp__c</fullName>
        <label>ActualInTimestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualOffGMTTimestamp__c</fullName>
        <label>ActualOffGMTTimestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualOffTimestamp__c</fullName>
        <label>ActualOffTimestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualOnGMTTimestamp__c</fullName>
        <label>ActualOnGMTTimestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualOnTimestamp__c</fullName>
        <label>ActualOnTimestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualOutGMTTimestamp__c</fullName>
        <label>ActualOutGMTTimestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualOutTimestamp__c</fullName>
        <label>ActualOutTimestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Arrival_Date_Time_calc__c</fullName>
        <formula>LEFT( Scheduled_Arrival_Date_Time__c , 17)</formula>
        <label>Actual Arrival Date/Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Departure_Date_Time_calc__c</fullName>
        <formula>LEFT( ActualDepartureTime__c ,17)</formula>
        <label>Actual Departure Date/Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Duration__c</fullName>
        <label>Actual Duration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Taxi_In__c</fullName>
        <formula>((VALUE(LEFT(OnTime__c, 2)) * 60) + VALUE(RIGHT(OnTime__c, 2))) -

((VALUE(LEFT(InTime__c, 2)) * 60) + VALUE(RIGHT(InTime__c, 2)))</formula>
        <inlineHelpText>Actual Taxi in Minute Count reflects the actual time in minutes from Wheels On Time (wheels on the runway) to Gate In Time.</inlineHelpText>
        <label>Actual Taxi In (Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Taxi_Out__c</fullName>
        <formula>((VALUE(LEFT(OffTime__c, 2)) * 60) + VALUE(RIGHT(OffTime__c, 2))) -

((VALUE(LEFT(OutTime__c, 2)) * 60) + VALUE(RIGHT(OutTime__c, 2)))</formula>
        <inlineHelpText>Actual Taxi Out Minute Count reflects the actual time in minutes from Gate Out Time to Wheels Off Time (wheels off the runway).</inlineHelpText>
        <label>Actual Taxi Out (Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alerts__c</fullName>
        <formula>Handling_Notes_Alert__c &amp;  Flight_Grid_Alert__c</formula>
        <label>Alerts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArrivalAirport__c</fullName>
        <label>Arrival Airport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArrivalDelay__c</fullName>
        <label>ArrivalDelay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ArrivalGMTDifference__c</fullName>
        <label>Arrival GMT Difference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArrivalGateID__c</fullName>
        <inlineHelpText>Actual arrival gate</inlineHelpText>
        <label>Arrival Gate ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArrivalStateCode__c</fullName>
        <label>Arrival State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Delay__c</fullName>
        <label>Arrival Delay (Min)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoardCityCancelledIndicator2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BoardCityCancelledIndicator2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BoardCityCancelledIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BoardCityCancelledIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BoardCity__c</fullName>
        <label>BoardCity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelIndicator__c</fullName>
        <label>Flight Canceled Indicator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Complaint</label>
        <referenceTo>Case_Complaint__c</referenceTo>
        <relationshipLabel>Flight Legs</relationshipLabel>
        <relationshipName>Flight_Legs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompositeFlightFlagstopIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CompositeFlightFlagstopIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompositeFlightNoOpIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CompositeFlightNoOpIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompositeFlightStubbedIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CompositeFlightStubbedIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Controllable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Controllable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeltaAircraftCode__c</fullName>
        <label>Delta Aircraft Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartureAirport__c</fullName>
        <label>Departure Airport</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartureGMTDifference__c</fullName>
        <label>Departure GMT Difference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartureGateID__c</fullName>
        <inlineHelpText>Actual departure gate</inlineHelpText>
        <label>Departure Gate ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartureStateCode__c</fullName>
        <label>Departure State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Delay__c</fullName>
        <label>Departure Delay (Min)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElapsedTime2__c</fullName>
        <label>ElapsedTime2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElapsedTime__c</fullName>
        <label>Elapsed Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentType__c</fullName>
        <label>Equipment Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedArrivalGMTTime__c</fullName>
        <label>Estimated Arrival GMT Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedArrivalTime__c</fullName>
        <label>Estimated Arrival Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedDepartureGMTTime__c</fullName>
        <label>Estimated Departure GMT Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedDepartureTime__c</fullName>
        <label>Estimated Departure Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FactsItemNumber__c</fullName>
        <label>FactsItemNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FactsText__c</fullName>
        <label>FactsText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlagstopIndicator2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FlagstopIndicator2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlagstopIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FlagstopIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlagstopTimesIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FlagstopTimesIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlightCancellationReasonCode__c</fullName>
        <label>FlightCancellationReasonCode</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlightCancelledIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FlightCancelledIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlightHistoryExistsIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FlightHistoryExistsIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlightNumber__c</fullName>
        <label>Flight Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlightStubbedIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FlightStubbedIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlightTypeCode__c</fullName>
        <label>Flight Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlightTypeIndicator__c</fullName>
        <label>FlightTypeIndicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Date__c</fullName>
        <formula>LEFT(ScheduledDepartureTime__c , 10)</formula>
        <inlineHelpText>Date of Scheduled Departure</inlineHelpText>
        <label>Flight Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Grid_Alert__c</fullName>
        <formula>CASE( Flight_Grid__c,
&quot;EU Research in process&quot;, IMAGE(&quot;/resource/image_gridEUPending&quot;,&quot;EU Research in process&quot;, 40, 40),
&quot;EU Research complete&quot;, IMAGE(&quot;/resource/image_gridEUConfirmed&quot;,&quot;EU Research complete&quot;, 40, 40),
&quot;ASL Research in process&quot;, IMAGE(&quot;/resource/image_gridASLPending&quot;,&quot;ASL Research in process&quot;, 40, 40),
&quot;ASL Research complete&quot;, IMAGE(&quot;/resource/image_gridASLConfirmed&quot;,&quot;ASL Research complete&quot;, 40, 40),
&quot;Chile Research in process&quot;, IMAGE(&quot;/resource/image_gridChilePending&quot;,&quot;Chile Research in process&quot;, 40, 40),
&quot;Chile Research complete&quot;, IMAGE(&quot;/resource/image_gridChileConfirmed&quot;,&quot;Chile Research complete&quot;, 40, 40),
&quot;&quot;
)</formula>
        <label>Flight Grid Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Grid_Handling__c</fullName>
        <label>Flight Grid Handling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Comp Due</fullName>
                </value>
                <value>
                    <fullName>EU - Comp Due</fullName>
                </value>
                <value>
                    <fullName>ASL - Comp Due</fullName>
                </value>
                <value>
                    <fullName>Chile - Comp Due</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Grid_Notes__c</fullName>
        <label>Flight Grid Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flight_Grid__c</fullName>
        <label>Flight Grid?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>EU Research in process</fullName>
                </value>
                <value>
                    <fullName>EU Research complete</fullName>
                </value>
                <value>
                    <fullName>ASL Research in process</fullName>
                </value>
                <value>
                    <fullName>ASL Research complete</fullName>
                </value>
                <value>
                    <fullName>Chile Research in process</fullName>
                </value>
                <value>
                    <fullName>Chile Research complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Type_Description__c</fullName>
        <formula>CASE(  FlightTypeCode__c ,
&quot;A&quot;, &quot;ACS Handled Flights&quot;,
&quot;C&quot;, &quot;Connection Carrier&quot;,
&quot;D&quot;, &quot;Delta Shuttle&quot;,
&quot;E&quot;, &quot;Express Normal&quot;,
&quot;F&quot;, &quot;Delta Ferry&quot;,
&quot;G&quot;, &quot;Change of Gauge&quot;,
&quot;H&quot;, &quot;Delta Charter&quot;,
&quot;I&quot;, &quot;Express Charter&quot;,
&quot;K&quot;, &quot;Express Ferry&quot;,
&quot;L&quot;, &quot;Delta Codeshare&quot;,
&quot;M&quot;, &quot;Military&quot;,
&quot;N&quot;, &quot;Delta Normal&quot;,
&quot;O&quot;, &quot;Other Airline&quot;,
&quot;P&quot;, &quot;OA Codeshare&quot;,
&quot;Q&quot;, &quot;Cargo Postal Affairs&quot;,
&quot;R&quot;, &quot;Express Stub&quot;,
&quot;S&quot;, &quot;Delta Stub&quot;,
&quot;T&quot;, &quot;Delta Training&quot;,
&quot;U&quot;, &quot;Unused&quot;,
&quot;Z&quot;, &quot;Delta Testing&quot;,
&quot;&quot;)</formula>
        <inlineHelpText>Description of Flight Type Code returned from Deltamatic</inlineHelpText>
        <label>Flight Type Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GreatCircleMileage__c</fullName>
        <label>Great Circle Mileage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handling_Notes_Alert__c</fullName>
        <formula>IF(
ISBLANK( Handling_Notes__c),&quot;&quot;,
IMAGE(&quot;/resource/image_flightLegNotes&quot;, &quot;Handling Notes Populated&quot;, 40, 40) &amp; &quot; &quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handling Notes Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handling_Notes__c</fullName>
        <label>Other Flight Leg Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InTime__c</fullName>
        <inlineHelpText>Actual Time during arrival when the Flight is at the Gate</inlineHelpText>
        <label>In Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndustryStandardAircraftCode__c</fullName>
        <label>Industry Standard Aircraft Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InputDate__c</fullName>
        <label>InputDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegCancelledIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LegCancelledIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegMileage__c</fullName>
        <label>Leg Mileage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LegReturnIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates that the flight returned to the originating station of the flight leg</inlineHelpText>
        <label>Leg Return Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manifest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manifest</label>
        <referenceTo>Manifest__c</referenceTo>
        <relationshipLabel>Flight Legs</relationshipLabel>
        <relationshipName>Flight_Legs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MarketingAirlineCode__c</fullName>
        <label>Marketing Carrier</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MealCodeForFCabinDesc__c</fullName>
        <label>F Meal Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MealCodeForFCabin__c</fullName>
        <label>F Cabin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MealCodeForJCabinDesc__c</fullName>
        <label>J Meal Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MealCodeForJCabin__c</fullName>
        <label>J Cabin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MealCodeForOtherCabinDesc__c</fullName>
        <label>Other Meal Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MealCodeForOtherCabin__c</fullName>
        <label>Other Cabin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MealCodeForYCabinDesc__c</fullName>
        <label>Y Meal Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MealCodeForYCabin__c</fullName>
        <label>Y Cabin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MovieIndicator__c</fullName>
        <inlineHelpText>Indicator that a movie is available on the flight</inlineHelpText>
        <label>Movie Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoMealsThisLegIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NoMealsThisLegIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OffCity__c</fullName>
        <label>OffCity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OffTime__c</fullName>
        <inlineHelpText>Actual Time during departure Time when the wheels of the Flight take off from the Ground</inlineHelpText>
        <label>Off Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Official_Tarmac_Delay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Official Tarmac Delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OnTime__c</fullName>
        <inlineHelpText>Actual Time during the arrival when the wheels of the Flight are on the Ground</inlineHelpText>
        <label>On Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperatingAirlineCode__c</fullName>
        <label>Operating Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperatingFlightNumber__c</fullName>
        <label>Operating Flight Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperlArlnCd__c</fullName>
        <label>OperlArlnCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperlArlnNbr__c</fullName>
        <label>OperlArlnNbr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutTime__c</fullName>
        <label>Out Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDAgentIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDAgentIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduleArrivalGMTTimestamp__c</fullName>
        <label>ScheduleArrivalGMTTimestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleArrivalTimestamp__c</fullName>
        <label>ScheduleArrivalTimestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleDepartureGMTTimestamp__c</fullName>
        <label>ScheduleDepartureGMTTimestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleDepartureTimestamp__c</fullName>
        <label>ScheduleDepartureTimestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledArrivalGMTTime__c</fullName>
        <label>Scheduled Arrival GMT Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledArrivalTimeFI__c</fullName>
        <label>ScheduledArrivalTimeFI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledArrivalTime__c</fullName>
        <label>Scheduled Arrival Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledDepartureGMTTime__c</fullName>
        <label>Scheduled Departure GMT Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledDepartureTimeFI__c</fullName>
        <label>ScheduledDepartureTimeFI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledDepartureTime__c</fullName>
        <label>Scheduled Departure Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Arrival_Date_Time__c</fullName>
        <formula>LEFT( ScheduledArrivalTime__c ,17)</formula>
        <label>Scheduled Arrival Date/Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Arrival_Time_Local__c</fullName>
        <formula>DATETIMEVALUE(SUBSTITUTE( ScheduledArrivalGMTTime__c , &quot;T&quot;, &quot; &quot;))</formula>
        <label>Scheduled Arrival Time (Local)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Departure_Date_Time__c</fullName>
        <label>Scheduled Departure Date/Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Departure_Date_Time_calc__c</fullName>
        <formula>LEFT(ScheduledDepartureTime__c,17)</formula>
        <label>Scheduled Departure Date/Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Duration__c</fullName>
        <label>Scheduled Duration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScopeIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scope Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShipNumber__c</fullName>
        <label>Ship Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TakeoffNumber__c</fullName>
        <label>Take Off Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxiInTime__c</fullName>
        <label>TaxiInTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxiOutTime__c</fullName>
        <label>TaxiOutTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticket</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipLabel>Flight Legs</relationshipLabel>
        <relationshipName>Flight_Legs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X4_Digit_Flight_Number__c</fullName>
        <description>4 Digit Flight Number with leading zeros
US-47</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id ,(OperatingAirlineCode__c &amp; LPAD( FlightNumber__c , 4 ,&apos;0&apos;)),&quot;_self&quot;)</formula>
        <label>Flight Number</label>
        <type>Text</type>
    </fields>
    <label>Flight Leg</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ActualArrivalGMTTime__c</columns>
        <columns>Actual_Departure_Date_Time_calc__c</columns>
        <columns>Mileage__c</columns>
        <columns>LegMileage__c</columns>
        <columns>OperatingAirlineCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Flight Leg Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flight Legs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>